# protoviz_web

./: 404.html  Cargo.toml  Dioxus.toml  README.md  main.css
.github/workflows/: deploy.yml
assets/: main.css
assets/dioxus/: protoviz-web.js  protoviz-web.js.br  protoviz-web_bg.wasm  protoviz-web_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js  inline0.js.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
src/: main.rs  utils.rs
