[package]
name = "protoviz-web"
version = "0.2.3"
authors = ["Daniel Stuart <daniel.stuart14@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.6", features = ["web"] }
dioxus-logger = "0.5.1"
dioxus-free-icons = { version = "0.8.6", features = ["font-awesome-solid", "font-awesome-brands"] }
protoviz = "0.5.3"
hex_color = "3.0.0"
js-sys = "0.3.70"
web-sys = { version = "0.3.70", features = ["Blob", "BlobPropertyBag", "Url"] }
serde_json = "1.0.128"
gloo-dialogs = "0.2.0"
chrono = "0.4.38"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
